objects/LAT_ContractDA__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>LAT Contracts DA</relationshipLabel>
        <relationshipName>LAT_Contracts_DA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DANumber__c</fullName>
        <label>Documento</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LAT_Fiscal_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Tipo</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>LAT Contract DA</label>
    <nameField>
        <displayFormat>LCDA-{00000}</displayFormat>
        <label>LAT Contract DA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Contracts DA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>